--- a/src/main/resources/assets/urushi/lang/en_us.json
+++ b/src/main/resources/assets/urushi/lang/en_us.json
@@ -2527,6 +2527,7 @@
    "block.urushi.green_tatami_slab": "Green Tatami Slab",
    "block.urushi.brown_tatami_slab": "Brown Tatami Slab",
    "block.urushi.sand_coast_slab": "Sand Coast Slab",
-   "block.urushi.sand_coast_stairs": "Sand Coast Stairs"
+   "block.urushi.sand_coast_stairs": "Sand Coast Stairs",
+   "block.urushi.kakuriyo_portal": "Kakuriyo Portal"
    
 }
