--- a/src/main/resources/assets/urushi/lang/ja_jp.json
+++ b/src/main/resources/assets/urushi/lang/ja_jp.json
@@ -644,7 +644,7 @@
 
    "item.urushi.wood_chip": "木のチップ",
 
-   "info.urushi.chiseled_lacquer_log": "火打石か何かしらのツールで漆の原木すると入手",
+   "info.urushi.chiseled_lacquer_log": "火打石か何かしらのツールで漆の原木を右クリックすると入手",
 
    "info.urushi.raw_urushi_layer": "切り込みが入った漆の原木から生成される",
 
@@ -2524,7 +2524,8 @@
    "block.urushi.green_tatami_slab": "緑色の畳のハーフブロック",
    "block.urushi.brown_tatami_slab": "茶色の畳のハーフブロック",
    "block.urushi.sand_coast_slab": "砂壁のハーフブロック",
-   "block.urushi.sand_coast_stairs": "砂壁の階段"
+   "block.urushi.sand_coast_stairs": "砂壁の階段",
+   "block.urushi.kakuriyo_portal": "幽世への門"
    
    
 }
